# shape-HC

./: README.md
ai_worker/ffw_bringup/config/ffw_bg2_rev4_follower/: pack_position.yaml
ai_worker/ffw_bringup/launch/: ffw_bg2_pack.launch.py  ffw_lg2_leader_ai.launch.py  ffw_sh5_follower_ai.launch.py
ai_worker/ffw_navigation/launch/: navigation.launch.py
humanoid_challenge/docker/: README.md  container.sh
humanoid_challenge/docs/: PERCEPTION_INTERFACE.md  PERCEPTION_NODE_VERIFICATION.md  PROGRESS_SUMMARY.md
humanoid_challenge/mission/mission/: mission_a.py
humanoid_challenge/perception/perception_nodes/head_projection/: grasp_pcd_node.py
humanoid_challenge/perception/perception_nodes/monitor_ocr/: frame_aggregator.py  ocr_pipeline_parts.py
humanoid_challenge/perception/perception_nodes/tray_occupancy/: tray_occupancy_node.py
humanoid_challenge/perception/perception_nodes/wrist_projection/: wrist_grasp_pcd_node.py
humanoid_challenge/task_management/launch/: task_management.launch.py
humanoid_challenge/task_management/task_management/: tray_occupancy_node.py
robotis_applications/: .gitignore
robotis_applications/docs/: MISSION_A_SCENARIO_PLAN.md  PERCEPTION_INTERFACE.md  PROGRESS_SUMMARY.md  VR_TELEOPERATION.md
robotis_applications/manipulation/ai_worker_manipulation/: package.xml  setup.cfg  setup.py
robotis_applications/manipulation/ai_worker_manipulation/ai_worker_manipulation/data/: object_lut.json
robotis_applications/manipulation/ai_worker_manipulation/ai_worker_manipulation/robot_interface/: gripper_controller.py  moveit_client.py  planning_scene.py  tf_transformer.py
robotis_applications/manipulation/ai_worker_manipulation/ai_worker_manipulation/skill_primitives/: environment.py  grasp_assesment.py  pick_and_place.py  point_cloud_transformer_node.py
robotis_applications/manipulation/ai_worker_manipulation/ai_worker_manipulation/tests/: demo_0513.py  demo_0520.py  demo_0521.py  gpd_dual_view_node.py  move_home.py  move_to_pose.py  test_gpd_open3d.py  test_gpd_open3d_2.py  test_gpd_open3d_SY.py  test_move_to_pose.py
robotis_applications/mission/: README.md  mission_a.py
robotis_applications/perception/monitor_ocr/: README.md  debug_roi.py  deploy.sh  package.xml  run_ocr.sh  setup.cfg  setup.py  test_realtime.py
robotis_applications/perception/monitor_ocr/monitor_ocr/: frame_aggregator.py  monitor_ocr_node.py  ocr_pipeline.py  ocr_pipeline_hq.py  ocr_pipeline_parts.py  paddle_compat.py  viewer_node.py
robotis_applications/perception/perception_2d_to_pcd/: README.md  package.xml  setup.cfg  setup.py
robotis_applications/perception/perception_2d_to_pcd/config/: params.yaml
robotis_applications/perception/perception_2d_to_pcd/launch/: all.launch.py  grasp_pcd.launch.py  pointcloud.launch.py  projection.launch.py
robotis_applications/perception/perception_2d_to_pcd/perception_2d_to_pcd/: grasp_pcd_node.py  pointcloud_node.py  projection_node.py
robotis_applications/perception/perception_2d_to_pcd_wrist/: README.md  package.xml  setup.cfg  setup.py
robotis_applications/perception/perception_2d_to_pcd_wrist/config/: params.yaml
robotis_applications/perception/perception_2d_to_pcd_wrist/launch/: wrist_all.launch.py  wrist_grasp_pcd.launch.py  wrist_pointcloud.launch.py  wrist_projection.launch.py
robotis_applications/perception/perception_2d_to_pcd_wrist/perception_2d_to_pcd_wrist/: wrist_grasp_pcd_node.py  wrist_pointcloud_node.py  wrist_projection_node.py  wrist_reprojection.py
robotis_applications/perception/perception_part_detector/: CMakeLists.txt  README.md  detector_node.py  package.xml  setup.cfg  setup.py
robotis_applications/perception/perception_part_detector/config/: params.yaml
robotis_applications/perception/perception_part_detector/launch/: detector.launch.py
robotis_applications/perception/perception_part_detector/msg/: PartDetection.msg  PartDetectionArray.msg
robotis_applications/perception/perception_part_detector/perception_part_detector/: __init__.py
robotis_applications/robotis_vuer/: README.md
robotis_applications/robotis_vuer/robotis_vuer/: vr_publisher_sg2.py
