<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ai_worker_manipulation</name>
  <version>0.0.1</version>
  <description>Manipulation stack for the 2026 Humanoid Challenge</description>
  <maintainer email="chlgkals0730@gmail.com">hamin</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>pymoveit2</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>moveit_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
