<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception_2d_to_pcd_wrist</name>
  <version>0.1.0</version>
  <description>
    Wrist (RealSense right camera) variant of perception_2d_to_pcd. Converts 2D
    YOLO detections into 3D poses / point clouds in base_link. Because the wrist
    RGB and depth streams are unaligned and on different optical frames, depth is
    re-projected into the RGB image plane (depth->color extrinsics) before mask
    filtering. Provides three nodes: single-center pose, full-scene cloud, and
    per-object cleaned grasp cloud.
  </description>
  <maintainer email="dev@example.com">perception</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>perception_part_detector</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
